clang/test/BSC/Negative/Trait/trait_return/trait_return_empty_defined.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait T {};

_Trait T *foo() {
    return; // expected-error {{non-void function 'foo' should return a value}}
}
